@@ -1,9 +1,5 @@
 package it.gov.pagopa.wispconverter.utility;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-
 import it.gov.pagopa.wispconverter.controller.ReceiptController;
 import it.gov.pagopa.wispconverter.controller.model.ReceiptRequest;
 import it.gov.pagopa.wispconverter.service.ReService;
@@ -12,59 +8,66 @@ import it.gov.pagopa.wispconverter.util.client.apiconfigcache.ApiConfigCacheClie
 import it.gov.pagopa.wispconverter.util.interceptor.AppServerLoggingInterceptor;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import java.io.ByteArrayInputStream;
-import java.lang.reflect.Method;
-import java.net.URI;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
-import org.springframework.http.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpRequest;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.client.ClientHttpRequestExecution;
 import org.springframework.http.client.ClientHttpResponse;
 import org.springframework.web.method.HandlerMethod;
-import org.springframework.web.util.DefaultUriBuilderFactory;
+
+import java.io.ByteArrayInputStream;
+import java.lang.reflect.Method;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class LoggingTest {
 
     @SneakyThrows
     @Test
-    public void testClientLogger(){
+    public void testClientLogger() {
         ReService reService = mock(ReService.class);
         HttpRequest httpRequest = mock(HttpRequest.class);
         ClientHttpResponse clientHttpResponse = mock(ClientHttpResponse.class);
         ClientHttpRequestExecution execution = mock(ClientHttpRequestExecution.class);
 
         HttpHeaders headers = new HttpHeaders();
-        headers.add("h1","h1value");
+        headers.add("h1", "h1value");
 
         when(httpRequest.getMethod()).thenReturn(HttpMethod.GET);
         when(httpRequest.getURI()).thenReturn(URI.create("http://localhost"));
         when(httpRequest.getHeaders()).thenReturn(headers);
 
-        when(execution.execute(any(),any())).thenReturn(clientHttpResponse);
+        when(execution.execute(any(), any())).thenReturn(clientHttpResponse);
         when(clientHttpResponse.getStatusCode()).thenReturn(HttpStatus.OK);
         when(clientHttpResponse.getHeaders()).thenReturn(headers);
         when(clientHttpResponse.getBody()).thenReturn(new ByteArrayInputStream("payload".getBytes(StandardCharsets.UTF_8)));
 
         RequestResponseLoggingProperties requestResponseLoggingProperties = new RequestResponseLoggingProperties();
         requestResponseLoggingProperties.setRequest(
-                new RequestResponseLoggingProperties.Request("h1",true,true,1000,true,false)
+                new RequestResponseLoggingProperties.Request("h1", true, true, 1000, true, false)
         );
         requestResponseLoggingProperties.setResponse(
-                new RequestResponseLoggingProperties.Response(true,true,1000,true)
+                new RequestResponseLoggingProperties.Response(true, true, 1000, true)
         );
 
-        ApiConfigCacheClientLoggingInterceptor interceptor = new ApiConfigCacheClientLoggingInterceptor(requestResponseLoggingProperties,reService);
-        interceptor.intercept(httpRequest,"payload".getBytes(),execution);
+        ApiConfigCacheClientLoggingInterceptor interceptor = new ApiConfigCacheClientLoggingInterceptor(requestResponseLoggingProperties, reService);
+        interceptor.intercept(httpRequest, "payload".getBytes(), execution);
 
     }
 
     @SneakyThrows
     @Test
-    public void testClientLogger2(){
+    public void testClientLogger2() {
 
         ReService reService = mock(ReService.class);
         HttpRequest httpRequest = mock(HttpRequest.class);
@@ -72,82 +75,82 @@ public class LoggingTest {
         ClientHttpRequestExecution execution = mock(ClientHttpRequestExecution.class);
 
         HttpHeaders headers = new HttpHeaders();
-        headers.add("h1","h1value");
+        headers.add("h1", "h1value");
 
         when(httpRequest.getMethod()).thenReturn(HttpMethod.GET);
         when(httpRequest.getURI()).thenReturn(URI.create("http://localhost"));
         when(httpRequest.getHeaders()).thenReturn(headers);
 
-        when(execution.execute(any(),any())).thenReturn(clientHttpResponse);
+        when(execution.execute(any(), any())).thenReturn(clientHttpResponse);
         when(clientHttpResponse.getStatusCode()).thenReturn(HttpStatus.OK);
         when(clientHttpResponse.getHeaders()).thenReturn(headers);
-        when(clientHttpResponse.getBody()).thenReturn(new ByteArrayInputStream("payload".getBytes(StandardCharsets.UTF_8)),new ByteArrayInputStream("payload".getBytes(StandardCharsets.UTF_8)));
+        when(clientHttpResponse.getBody()).thenReturn(new ByteArrayInputStream("payload".getBytes(StandardCharsets.UTF_8)), new ByteArrayInputStream("payload".getBytes(StandardCharsets.UTF_8)));
 
         RequestResponseLoggingProperties requestResponseLoggingProperties = new RequestResponseLoggingProperties();
         requestResponseLoggingProperties.setRequest(
-                new RequestResponseLoggingProperties.Request(null,true,true,1000,false,false)
+                new RequestResponseLoggingProperties.Request(null, true, true, 1000, false, false)
         );
         requestResponseLoggingProperties.setResponse(
-                new RequestResponseLoggingProperties.Response(true,true,1000,false)
+                new RequestResponseLoggingProperties.Response(true, true, 1000, false)
         );
 
-        ApiConfigCacheClientLoggingInterceptor interceptor = new ApiConfigCacheClientLoggingInterceptor(requestResponseLoggingProperties,reService);
-        interceptor.intercept(httpRequest,"payload".getBytes(),execution);
+        ApiConfigCacheClientLoggingInterceptor interceptor = new ApiConfigCacheClientLoggingInterceptor(requestResponseLoggingProperties, reService);
+        interceptor.intercept(httpRequest, "payload".getBytes(), execution);
 
     }
 
     @SneakyThrows
     @Test
-    public void testServerLogger(){
+    public void testServerLogger() {
 
         Method method = ReceiptController.class.getMethod("receiptOk", ReceiptRequest.class);
-        HandlerMethod handlerMethod = new HandlerMethod(new ReceiptController(null),method);
+        HandlerMethod handlerMethod = new HandlerMethod(new ReceiptController(null, null), method);
 
         HttpServletRequest httpRequest = mock(HttpServletRequest.class);
         HttpServletResponse httpResponse = mock(HttpServletResponse.class);
 
-        when(httpRequest.getHeaderNames()).thenReturn(Collections.enumeration(Arrays.asList("h1")));
-        when(httpRequest.getHeaders("h1")).thenReturn(Collections.enumeration(Arrays.asList("h1value")));
+        when(httpRequest.getHeaderNames()).thenReturn(Collections.enumeration(List.of("h1")));
+        when(httpRequest.getHeaders("h1")).thenReturn(Collections.enumeration(List.of("h1value")));
         when(httpRequest.getQueryString()).thenReturn("a=1&b=2");
 
         RequestResponseLoggingProperties requestResponseLoggingProperties = new RequestResponseLoggingProperties();
         requestResponseLoggingProperties.setRequest(
-                new RequestResponseLoggingProperties.Request(null,true,true,1000,true,true)
+                new RequestResponseLoggingProperties.Request(null, true, true, 1000, true, true)
         );
         requestResponseLoggingProperties.setResponse(
-                new RequestResponseLoggingProperties.Response(true,true,1000,true)
+                new RequestResponseLoggingProperties.Response(true, true, 1000, true)
         );
 
         AppServerLoggingInterceptor interceptor = new AppServerLoggingInterceptor(requestResponseLoggingProperties);
-        interceptor.preHandle(httpRequest,httpResponse,handlerMethod);
-        interceptor.afterCompletion(httpRequest,httpResponse,handlerMethod,null);
+        interceptor.preHandle(httpRequest, httpResponse, handlerMethod);
+        interceptor.afterCompletion(httpRequest, httpResponse, handlerMethod, null);
 
     }
 
     @SneakyThrows
     @Test
-    public void testServerLogger2(){
+    public void testServerLogger2() {
 
         Method method = ReceiptController.class.getMethod("receiptOk", ReceiptRequest.class);
-        HandlerMethod handlerMethod = new HandlerMethod(new ReceiptController(null),method);
+        HandlerMethod handlerMethod = new HandlerMethod(new ReceiptController(null, null), method);
 
         HttpServletRequest httpRequest = mock(HttpServletRequest.class);
         HttpServletResponse httpResponse = mock(HttpServletResponse.class);
 
-        when(httpRequest.getHeaderNames()).thenReturn(Collections.enumeration(Arrays.asList("h1")));
-        when(httpRequest.getHeaders("h1")).thenReturn(Collections.enumeration(Arrays.asList("h1value")));
+        when(httpRequest.getHeaderNames()).thenReturn(Collections.enumeration(List.of("h1")));
+        when(httpRequest.getHeaders("h1")).thenReturn(Collections.enumeration(List.of("h1value")));
 
         RequestResponseLoggingProperties requestResponseLoggingProperties = new RequestResponseLoggingProperties();
         requestResponseLoggingProperties.setRequest(
-                new RequestResponseLoggingProperties.Request(null,true,true,10,false,false)
+                new RequestResponseLoggingProperties.Request(null, true, true, 10, false, false)
         );
         requestResponseLoggingProperties.setResponse(
-                new RequestResponseLoggingProperties.Response(true,true,10,false)
+                new RequestResponseLoggingProperties.Response(true, true, 10, false)
         );
 
         AppServerLoggingInterceptor interceptor = new AppServerLoggingInterceptor(requestResponseLoggingProperties);
-        interceptor.preHandle(httpRequest,httpResponse,handlerMethod);
-        interceptor.afterCompletion(httpRequest,httpResponse,handlerMethod,null);
+        interceptor.preHandle(httpRequest, httpResponse, handlerMethod);
+        interceptor.afterCompletion(httpRequest, httpResponse, handlerMethod, null);
 
     }
 }
